Fixed overflow

--- a/src/sections/htmlBody.scss
+++ b/src/sections/htmlBody.scss
@@ -3,6 +3,7 @@
 html {
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
 
 :root {
@@ -15,6 +16,7 @@ html {
 body {
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
   background-color: lightgrey;
   font-family: 'Roboto', sans-serif;
   line-height: 1.2;
@@ -24,7 +26,7 @@ body {
 .container {
   margin: 0 auto;
   max-width: 1280px;
-  width: 100%;
+  width: 100vw;
   background-color: white;
 }
 
